<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_day"
            style="@style/bigText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/today"
            android:textColor="@color/Black"
            android:textStyle="bold" />

        <TextView
            style="@style/mediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textColor="@color/Grey"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/max_temp">

            <TextView
                style="@style/extraLargeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_temp"
                android:textColor="@color/Black"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/image_temp"
                android:background="@drawable/art_clear" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_72">

            <TextView
                style="@style/largeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_temp"
                android:textColor="@color/Grey" />

            <TextView
                style="@style/mediumBigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_90"
                android:text="@string/clear"
                android:textColor="@color/Grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                style="@style/mediumBigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/Grey" />

            <TextView
                style="@style/mediumBigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_small_vertical_margin"
                android:text="@string/presure"
                android:textColor="@color/Grey" />

            <TextView
                style="@style/mediumBigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_small_vertical_margin"
                android:text="@string/wind"
                android:textColor="@color/Grey" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
